--- a/templates/index.html
+++ b/templates/index.html
@@ -188,6 +188,15 @@ $.ajax({
             
             </div>
 </span>
+
+<span class="visible-desktop"><div class="title_fnt">
+    	<h1>New Arrivals</h1><a href="javascript:void(0)" class="newproductlarrow" id="newproductlarrow"></a> <a href="javascript:void(0)"  class="newproductrarrow" id="newproductrarrow"></a>
+        </div><div class="row-fluid">
+        	<div class="freshdesignweb">  
+    	    <AJDF:output>$newarrivalproducts</AJDF:output>
+
+</div>
+        </div></span>
 <span class="visible-tablet">
 			<div class="row-fluid">
         	<div class="span4"><a href="<AJDF:output>$smarty.session.base_url</AJDF:output>/index.php?do=index"><img src="<AJDF:output>$sitelogo</AJDF:output>" alt="ZeusCart"></a></div>
