--- a/templates/addtocart.html
+++ b/templates/addtocart.html
@@ -44,7 +44,82 @@
     </div>
   
     <!-- /container -->
+<script>
+function checkInputs()
+{
+	$( "#default_ship_cost" ).hide();
+	var ship_type=$('#shipment_id').val();
+	if(ship_type=='0')
+	{
+		alert('Please select the shipping method');
+		return false;
+	}
+	else
+	{
 
-   <AJDF:output>include file="footer.html"</AJDF:output>
+		if(ship_type=='2')
+		{
+			if(document.getElementById('shipdurid').value=='' || document.getElementById('shipdurid').value=='0')
+			{
+					
+				alert('Please select the shipping duration');
+				return false;
+			}
+		}
+					
+
+	}
+	return true;
+	
+}
+function selectShippingType(id)
+{
+
+	
+	$( "#duration_ups" ).hide();
+	$( "#ship_cost").hide();	
+	$( "#default_ship_cost" ).hide();
+
+	if(id=='1')
+	{
+	    $( "#default_ship_cost" ).show();	
+	}			
+	if(id=='2')
+	{
+		document.getElementById("shipdurid").value = "0";
+		$( "#duration_ups" ).show();
+	}
+	
+}
+function shipDuration(ship_dur_id,zip,weight)
+{
+
+
+	if(ship_dur_id!='0')
+	{
+		$.ajax({
+		url:'<AJDF:output>$smarty.session.base_url</AJDF:output>/index.php?do=showcart&action=calculateshipcost',
+		data: 'ship_dur_id='+ship_dur_id+'&zip='+zip+'&weight='+weight,
+		type: 'GET',
+		success: function (resp) {
+			document.getElementById('var_ship').innerHTML=resp;
+			document.getElementById('shipping_cost').value=resp;
+				  $( "#default_ship_cost" ).hide();	
+				$( "#ship_cost").show();
+				
+			}
+		});
+	}
+	else
+	{
+		$( "#ship_cost").hide();
+		alert('Please select the shipping duration');
+		
+	}	
+	
+}
+</script>
+
+<AJDF:output>include file="footer.html"</AJDF:output>
 
 
