--- a/templates/index.html
+++ b/templates/index.html
@@ -188,15 +188,6 @@ $.ajax({
             
             </div>
 </span>
-
-<span class="visible-desktop"><div class="title_fnt">
-    	<h1>New Arrivals</h1><a href="javascript:void(0)" class="newproductlarrow" id="newproductlarrow"></a> <a href="javascript:void(0)"  class="newproductrarrow" id="newproductrarrow"></a>
-        </div><div class="row-fluid">
-        	<div class="freshdesignweb">  
-    	    <AJDF:output>$newarrivalproducts</AJDF:output>
-
-</div>
-        </div></span>
 <span class="visible-tablet">
 			<div class="row-fluid">
         	<div class="span4"><a href="<AJDF:output>$smarty.session.base_url</AJDF:output>/index.php?do=index"><img src="<AJDF:output>$sitelogo</AJDF:output>" alt="ZeusCart"></a></div>
@@ -279,10 +270,18 @@ $.ajax({
 <div class="container">
     
 <span class="visible-desktop"><div class="title_fnt">
-    	<h1>Feature Products </h1><a href="javascript:void(0)" class="left_arrow"></a> <a href="javascript:void(0)"  class="right_arrow"></a>
+    	<h1>Featured Products </h1><a href="javascript:void(0)" class="left_arrow"></a> <a href="javascript:void(0)"  class="right_arrow"></a>
         </div><div class="row-fluid">
         	<div class="freshdesignweb">  
     	    <AJDF:output>$allfeaturedproducts</AJDF:output>
+
+</div>
+        </div></span>
+<span class="visible-desktop"><div class="title_fnt">
+    	<h1>New Arrivals</h1><a href="javascript:void(0)" class="newproductlarrow" id="newproductlarrow"></a> <a href="javascript:void(0)"  class="newproductrarrow" id="newproductrarrow"></a>
+        </div><div class="row-fluid">
+        	<div class="freshdesignweb">  
+    	    <AJDF:output>$newarrivalproducts</AJDF:output>
 
 </div>
         </div></span>
@@ -302,9 +301,7 @@ $.ajax({
         <div id="welcome_div">
  			<div class="row-fluid">
             	<div class="span12">
-                <h2>About BEAUTY Shop</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit...</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit...</p>
+                <AJDF:output>$homepagecontent</AJDF:output>
                    <div class="clear"></div>
                 </div>
                 </div>
