--- a/admin/templates/addcurrencysetting.html
+++ b/admin/templates/addcurrencysetting.html
@@ -51,7 +51,7 @@ $("select").chosen({allow_single_deselect:true});
         <AJDF:output>if $smarty.get.do eq 'showaddcurrency'</AJDF:output>
             <li>
               <a href="javascript:void(0);"  class="save_icon"  id="currencyAddButton"></a> </li>
-
+   <li><a href="javascript:history.back()" class="back_icon1" onclick=""></a></li>
               <AJDF:output>else</AJDF:output>
 
                           <li>
