--- a/admin/templates/footer_settings_connect.html
+++ b/admin/templates/footer_settings_connect.html
@@ -67,7 +67,12 @@ $(document).ready(function (){
 
 <form name="frm" action="?do=updatefootersettings&action=connect" method="post"  id="updateFooter">
 
-
+<div class="row-fluid">
+              <div class="span6">
+                <label>
+  		Free Shipping Cost <font color="red">*</font></label>
+ 		 
+       		<input type="text" name="free_shipping_cost" cols="45" rows="4" class="span8" id="free_shipping_cost"  value="<AJDF:output>$footerconnect.free_shipping_cost</AJDF:output>" ></div></div>
 
 
  <div class="row-fluid">
