--- a/admin/templates/ProductEntry.html
+++ b/admin/templates/ProductEntry.html
@@ -91,7 +91,7 @@ function checkInputs()
 	}
 	else
 	{
-		if ((document.productreg.product_title.value=='') || (document.productreg.sku.value==''))
+		if ((document.productreg.product_title.value=='') || (document.productreg.sku.value=='') || (document.productreg.txtweight.value=='') || (document.productreg.product_alias.value==''))
 		{
 			alert('Please enter the mandatory fields In General');
 			tabOpenvalidation('2');
@@ -100,6 +100,21 @@ function checkInputs()
 		else
 		{
 
+			if(!$('#uniquesku').is(':empty'))
+			{
+				alert('Please enter the unique sku');
+				tabOpenvalidation('2');
+				return false;
+
+			}
+		
+			if(!$('#checkalias').is(':empty'))
+			{
+				alert('Please enter the product alias');
+				tabOpenvalidation('2');
+				return false;
+
+			}
 			if(isNaN(document.productreg.txtweight.value))
 			{
 				alert('Invalid Inputs In Weight');
@@ -468,8 +483,49 @@ function productalias(val)
 
 	if(val!='')
 	{
-		var url='?do=productentry&action=productalias&alias='+ val;
-		ajax(url,'checkalias');	
+			$.ajax({
+			url:'?do=productentry&action=productalias',
+			data: 'alias='+val,
+			type: 'GET',
+			success: function (resp) {
+				if(resp ==1)
+				{
+					document.getElementById('checkalias').innerHTML="<code >Product alias already exists</code>";
+				}
+				else
+				{
+					document.getElementById('checkalias').innerHTML="";
+				
+				}
+	
+			}
+		});
+		
+	}
+
+}
+function checksku(val)
+{
+	
+	if(val!='')
+	{
+		$.ajax({
+		url:'?do=productentry&action=productsku',
+		data: 'sku='+val,
+		type: 'GET',
+		success: function (resp) {
+
+				if(resp ==1)
+				{
+					document.getElementById('uniquesku').innerHTML="<code >Product sku already exists</code>";
+				}
+				else
+				{
+					document.getElementById('uniquesku').innerHTML="";
+				
+				}
+			}
+		});
 		
 	}
 
@@ -489,7 +545,7 @@ for(i=1;i<=num;i++)
 		var divIdName ="productVariationDiv"+i;
 
 
-	newdiv.innerHTML ="<td width='15%'><input id='varianname"+i+"' name='varianname[]' type='text' class='span12'/> </td><td width='5%' ><input id='prsku"+i+"' name='prsku[]' type='text' class='span12'/></td><td width='5%'><input id='prprice"+i+"' name='prprice[]' type='text' class='span12'/></td><td width='5%'><input id='prmsrp"+i+"' name='prmsrp[]' type='text'  class='span12'/></td><td width='15%'> <input type=\"file\" id='prvarimage"+i+"' name='prvarimage[]' size='1'></td><td width='25%'><input id='prwidth"+i+"' name='prwidth[]' type='text' class=\"variation_date\" class='span12'><input id='prheight"+i+"' name='prheight[]' type='text' class=\"variation_date\" class='span12'/><input id='prdepth"+i+"' name='prdepth[]' type='text' class=\"variation_date\"/></td><td width='5%'><input id='prweight"+i+"' name='prweight[]' type='text' class='span12'/></td>	<td width='10%'><input id='prshipcost"+i+"' name='prshipcost[]' type='text' class='span12'/></td><td width='5%'><input id='prsoh"+i+"' name='prsoh[]' type='text' class='span12' /></td><td width='5%'><input id='prrol"+i+"' name='prrol[]' type='text' class='span12'/></td>	<td width='5%'><i class='icon-remove'></i> </a></td></tr>";
+	newdiv.innerHTML ="<td width='15%'><input id='varianname"+i+"' name='varianname[]' type='text' class='span12'/> </td><td width='5%' ><input id='prsku"+i+"' name='prsku[]' type='text' class='span12'/></td><td width='5%'><input id='prprice"+i+"' name='prprice[]' type='text' class='span12'/></td><td width='5%'><input id='prmsrp"+i+"' name='prmsrp[]' type='text'  class='span12'/></td><td width='15%'> <input type=\"file\" id='prvarimage"+i+"' name='prvarimage[]' size='1' style='width: 165px ! important;'></td><td width='25%'><input id='prwidth"+i+"' name='prwidth[]' type='text' class=\"variation_date\" class='span12'><input id='prheight"+i+"' name='prheight[]' type='text' class=\"variation_date\" class='span12'/><input id='prdepth"+i+"' name='prdepth[]' type='text' class=\"variation_date\"/></td><td width='5%'><input id='prweight"+i+"' name='prweight[]' type='text' class='span12'/></td>	<td width='10%'><input id='prshipcost"+i+"' name='prshipcost[]' type='text' class='span12'/></td><td width='5%'><input id='prsoh"+i+"' name='prsoh[]' type='text' class='span12' /></td><td width='5%'><input id='prrol"+i+"' name='prrol[]' type='text' class='span12'/></td>	<td width='5%'><a href=\"javascript:;\"  onclick=\"removeVariation(\'"+divIdName+"\')\"><i class='icon-remove'></i> </a></td></tr>";
 		ni.appendChild(newdiv);
 		}
 	}
@@ -637,8 +693,8 @@ function removeVariation(rdiv)
         	</div>
 
 		<div class="row-fluid">
-        		<div class="span12"><label>Product Alias </label>
-        			<input name="product_alias" id="product_alias" value="<AJDF:output>$val.product_alias</AJDF:output>"   type="text" size="50" onblur="productalias(this.value);"/>&nbsp;<div style="color:#FF0000" id="checkalias"></div>
+        		<div class="span12"><label>Product Alias <font color="#FF0000">*</font></label>
+        			<input name="product_alias" id="product_alias" value="<AJDF:output>$val.product_alias</AJDF:output>"   type="text" size="50" onblur="productalias(this.value);" onkeyup="productalias(this.value);"/>&nbsp;<span id="checkalias"></span>
         		</div>
         	</div>
 
@@ -650,8 +706,9 @@ function removeVariation(rdiv)
         			</div>
         			<div class="row-fluid">
         				<div class="span12"><label>SKU <font color="#FF0000">*</font></label>
-        					<div id="sku"><input name="sku" id="sku" type="text" value="<AJDF:output>$val.sku</AJDF:output>"/>
-        						<div id="dsku" style="left: 50px; top: 50px;"></div>
+        					<div id="sku"><input name="sku" id="sku" type="text" value="<AJDF:output>$val.sku</AJDF:output>" onblur="checksku(this.value);" onkeyup="checksku(this.value);"/>&nbsp;<span id="uniquesku"></span>
+						
+        					<div id="dsku" style="left: 50px; top: 50px;"></div>
         					</div></div></div>
         					<div class="row-fluid">
         						<div class="span12"><label>Brand</label>
@@ -665,7 +722,7 @@ function removeVariation(rdiv)
         							</div>
 
         							<div class="row-fluid">
-        								<div class="span12"><label>Weight</label>
+        								<div class="span12"><label>Weight <font color="#FF0000">*</font></label>
         									<input name="txtweight" id="txtweight"  type="text" value="<AJDF:output>$val.txtweight</AJDF:output>" />&nbsp;<code>(lbs)</code> <div style="color:#FF0000">
         									<AJDF:output>$msg.txtweight</AJDF:output>
         								</div></div>
